--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ fastapi
 uvicorn
 openai
 sqlalchemy
+psycopg2-binary
 pydantic
 qdrant-client
 python-dotenv
-fastembed 
+fastembed
 pypdf
 numpy
+requests
